--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,6 +13,8 @@ permissions: read-all
 
 jobs:
   terraform:
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Do not change
     runs-on: ubuntu-latest
     steps:
       - uses: hashicorp/setup-terraform@633666f66e0061ca3b725c73b2ec20cd13a8fdd1 # v2.0.3
